# meechat

./: app.py  pyproject.toml  run.py
app/: __init__.py  config.py  extensions.py
app/chat/: __init__.py  routes.py  socket.py
app/chat/templates/chat/: rooms.html
app/core/: __init__.py  routes.py
app/core/templates/core/: home.html
app/models/: models.py
app/static/css/: styles.css
app/static/js/: chat_socket.js
app/templates/: base.html
static/css/: styles.css
templates/: base.html  index.html
