[project]
name = "chat-me"
version = "0.1.0"
description = "A monthy cycle tracker app with comforting levels and friends to talk to"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=4.6.1",
    "python-dotenv>=1.2.1",
    "websockets>=16.0",
    "flask-sqlalchemy~=3.1.1",
    "flask-jwt-extended==4.7.1",
    "flask-limiter==4.1.1",
    "sqlalchemy>=2.0.46",
]
